# rdpso-sim

./: .gitignore  Makefile  index.html
assets/: index-1QcgKgAL.js  index-QTXvytTK.js  index-d6vANRQ2.css  rdpso_sim_bg-mlNWWOn6.wasm
rdpso/: Cargo.toml  LICENSE_MIT  Makefile
rdpso/src/: goal.rs  lib.rs  main.rs  terrain.rs
rdpso/src/physics/: collision.rs
rdpso/src/pso/: mod.rs  particle.rs  sensor.rs  swarm.rs
rdpso/src/space/: mod.rs  vector.rs
rdpso/src/utils/: mod.rs  perlin.rs
web/: gui.js  index.html  main.js  package-lock.json  package.json  simulator.js  space.js  style.css  surface.js  swarm.js  vite.config.js
