[package]
name = "rdpso-sim"
version = "0.1.0"
authors = ["Bruno Gomes <gomes.bruno.ac@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"

wasm-bindgen = "0.2.84"
ka = "0.1.3"
circular-queue = "0.2.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.65"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
